# semi-rs

./: .gitignore  Cargo.toml  license.md  readme.md
example/: Cargo.toml
example/src/: main.rs
semi-e30/: Cargo.toml
semi-e30/src/: lib.rs
semi-e37/: Cargo.toml
semi-e37/src/: lib.rs
semi-e5/src/: lib.rs
semi-gem-rs/src/: lib.rs
semi-hsms-rs/src/: lib.rs
semi-secsii-rs/: Cargo.toml
semi-secsii-rs/src/: lib.rs
semi_e30/: Cargo.toml
semi_e30/src/: lib.rs
semi_e37/: Cargo.toml  readme.md
semi_e37/src/: generic.rs  lib.rs  primitive.rs  single.rs
semi_e5/: Cargo.toml  readme.md
semi_e5/src/: format.rs  items.rs  lib.rs  units.rs
semi_e5/src/messages/: mod.rs  s1.rs  s2.rs
