[package]

# Package
name = "semi_e37"
version = "0.1.0"
description = "High-Speed SECS Message Services"
categories = ["network-programming"]
keywords = ["protocol", "network", "networking", "semi", "semiconductor"]

# Authorship
authors = ["Nathaniel Hardesty"]
license = "MIT"

# Documentation
readme = "readme.md"
repository = "https://github.com/NathanielHardesty/semi-rs"

# Rust
edition = "2021"
rust-version = "1.82"


[dependencies]

# semi_e5 is MIT
semi_e5 = "0.1.0"
#semi_e5 = {path = "../semi_e5", version = "0.1.0"}

# oneshot is MIT or Apache-2.0
oneshot = "0.1.6"
