[package]

# Package
name = "semi_e37"
version = "0.2.0"
description = "High-Speed SECS Message Services"
categories = ["network-programming"]
keywords = ["hsms", "semi", "transaction", "network", "protocol"]

# Authorship
authors = ["Nathaniel Hardesty"]
license = "MIT"

# Documentation
readme = "readme.md"
repository = "https://github.com/NathanielHardesty/semi-rs"

# Rust
edition = "2021"
rust-version = "1.82"


[dependencies]

# semi_e5 is MIT
semi_e5 = "0.2.0"
#semi_e5 = {path = "../semi_e5"}

# atomic is MIT or Apache-2.0
atomic = "0.6.0"

# bytemuck is MIT or Apache-2.0
bytemuck = {version = "1.18.0", features = ["derive"]}

# oneshot is MIT or Apache-2.0
oneshot = "0.1.6"
