[package]

# Package
name = "semi_e5"
version = "0.1.0"
description = "SEMI Equipment Communications Standard 2 - Message Content"
categories = ["network-programming"]
keywords = ["secs", "semi", "presentation", "protocol", "network"]

# Authorship
authors = ["Nathaniel Hardesty"]
license = "MIT"

# Documentation
readme = "readme.md"
repository = "https://github.com/NathanielHardesty/semi-rs"

# Rust
edition = "2021"
rust-version = "1.82"


[dependencies]

# encoding is MIT
encoding = "0.2.33"

# num_enum is MIT or Apache-2.0 or BSD-3-Clause
num_enum = "0.7.2"
